--- a/Src/package.json
+++ b/Src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bufferutil": "^3.0.1",
     "common-tags": "^1.4.0",
+    "discord-irc": "^2.4.0",
     "discord.js": "^11.0.0",
     "discord.js-commando": "^0.9.0",
     "erlpack": "^0.1.2",
