--- a/Src/package.json
+++ b/Src/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^11.0.0",
     "discord.js-commando": "^0.9.0",
     "erlpack": "^0.1.2",
+    "flags": "^0.1.3",
     "libsodium-wrappers": "^0.5.1",
     "modern-rcon": "^1.0.3",
     "node-opus": "^0.2.6",
