--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,18 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jagrosh</groupId>
+			<artifactId>JDA-Utilities</artifactId>
+			<version>1.8</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 		<repository>
 			<id>jcenter</id>
 			<name>jcenter-bintray</name>
