--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<version>1.8</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sedmelluq</groupId>
+			<artifactId>lavaplayer</artifactId>
+			<version>1.2.42</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
