--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "Marvin Ferwerda",
   "license": "UNLICENSED",
   "dependencies": {
-    "discord.js": "^11.2.1",
+    "discord.js": "^11.3.0",
     "discord.js-commando": "^0.9.0",
     "discord.js-commando-mysqlprovider": "^0.1.0",
     "discord.js-music-v11": "^1.3.4",
-    "mysql2": "^1.5.1",
+    "mysql2": "^1.5.2",
     "node-opus": "^0.2.6",
     "opusscript": "0.0.6",
+    "rss-parser": "^3.1.1",
     "ytdl": "^0.9.0",
     "ytdl-core": "^0.18.7"
   }
