--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-opus": "^0.2.6",
     "opusscript": "0.0.6",
     "rss-parser": "^3.1.1",
+    "youtube-dl": "^1.12.2",
     "ytdl": "^0.9.0",
     "ytdl-core": "^0.18.7"
   }
