--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marfbot2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "MarfBOT rewritten",
   "main": "kernel.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "discord.js": "^11.3.0",
-    "discord.js-commando": "^0.9.0",
+    "discord.js-commando": "github:discordjs/Commando#11.2",
     "discord.js-commando-mysqlprovider": "^0.1.0",
     "discord.js-music-v11": "^1.3.4",
     "mysql2": "^1.5.2",
